<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgAccount_cfc"
        android:id="@+id/msgAccount_cfc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLogin"
        android:layout_above="@+id/editEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hUser"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/lblPwd"
        android:layout_alignLeft="@+id/editPwd"
        android:layout_alignStart="@+id/editPwd" />

    <TextView
        android:id="@+id/lblPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPwd"
        android:layout_marginBottom="71dp"
        android:layout_alignBottom="@+id/editPwd"
        android:layout_alignRight="@+id/lblLogin"
        android:layout_alignEnd="@+id/lblLogin" />

    <EditText
        android:id="@+id/editPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hPwd"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginBottom="39dp"
        android:layout_above="@+id/btnSend"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSend"
        android:layout_marginBottom="108dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
